--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "angular-ui-router": "^0.3.2",
     "angular-ui-bootstrap": "^2.2.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular": "^1.5.9",
+    "angular-animate": "^1.5.9",
+    "angular-touch": "^1.5.9",
+    "bootstrap-css": "^3.3.6"
   }
 }
