--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/CharlottesWebpack/job-tracker#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "mongoose": "^4.7.1",
     "nodemon": "^1.11.0",
@@ -26,6 +27,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "shortid": "^2.2.6"
   }
 }
