--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
