--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.5.9",
     "angular-touch": "^1.5.9",
     "bootstrap-css": "^3.3.6",
-    "angular-xeditable": "^0.5.0"
+    "angular-xeditable": "^0.5.0",
+    "angular-validation-match": "^1.9.0"
   }
 }
