--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "track your job applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preInstall": "bower install"
   },
   "repository": {
     "type": "git",
