--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
+    "multer": "^1.2.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
