--- a/bower.json
+++ b/bower.json
@@ -7,13 +7,13 @@
   ],
   "dependencies": {
     "angular-ui-router": "^0.3.2",
-    "angular-ui-bootstrap": "^2.2.0",
     "bootstrap": "^3.3.7",
     "angular": "^1.5.9",
     "angular-animate": "^1.5.9",
     "angular-touch": "^1.5.9",
     "bootstrap-css": "^3.3.6",
     "angular-xeditable": "^0.5.0",
-    "angular-validation-match": "^1.9.0"
+    "angular-validation-match": "^1.9.0",
+    "angular-bootstrap": "^2.3.0"
   }
 }
