--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "gulp": "^3.9.1",
+    "gulp-ng-config": "^1.3.1",
     "mongoose": "^4.7.1",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
