--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "request": "^2.79.0",
     "shortid": "^2.2.6"
   }
 }
